--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -59,8 +61,9 @@ jobs:
           NHL_API_KEY: ${{ secrets.NHL_API_KEY }}
           EPL_API_KEY: ${{ secrets.EPL_API_KEY }}
           UCL_API_KEY: ${{ secrets.UCL_API_KEY }}
+          THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}   # ✅ added
         run: |
-          for K in MLB_API_KEY NFL_API_KEY NBA_API_KEY NHL_API_KEY EPL_API_KEY UCL_API_KEY; do
+          for K in MLB_API_KEY NFL_API_KEY NBA_API_KEY NHL_API_KEY EPL_API_KEY UCL_API_KEY THESPORTSDB_API_KEY; do
             if [ -n "${!K}" ]; then
               echo "✓ $K is set"
             else
@@ -73,10 +76,9 @@ jobs:
           # signer & RPC
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
-          # If you’re on Arbitrum Sepolia later, also set ARBITRUM_SEPOLIA_RPC_URL and have your script prefer it.
           ARBITRUM_SEPOLIA_RPC_URL: ${{ secrets.ARBITRUM_SEPOLIA_RPC_URL }}
 
-          # IMPORTANT: Slot must match what send-request.js uses (you currently use slot 0)
+          # IMPORTANT: Slot must match what your bot/contracts expect
           SLOT_ID: 0
           DON_TTL_MINUTES: 1440
 
@@ -87,8 +89,9 @@ jobs:
           NHL_API_KEY: ${{ secrets.NHL_API_KEY }}
           EPL_API_KEY: ${{ secrets.EPL_API_KEY }}
           UCL_API_KEY: ${{ secrets.UCL_API_KEY }}
+          THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}   # ✅ added
 
-          # Optional endpoints (harmless to upload; your JS doesn’t need them)
+          # Optional endpoints (harmless to upload; your SOURCE auto-detects)
           MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
           NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
           NBA_ENDPOINT: ${{ secrets.NBA_ENDPOINT }}
@@ -97,7 +100,7 @@ jobs:
           UCL_ENDPOINT: ${{ secrets.UCL_ENDPOINT }}
         run: |
           echo "Upload step sees these *_API_KEY envs:"
-          for K in MLB_API_KEY NFL_API_KEY NBA_API_KEY NHL_API_KEY EPL_API_KEY UCL_API_KEY; do
+          for K in MLB_API_KEY NFL_API_KEY NBA_API_KEY NHL_API_KEY EPL_API_KEY UCL_API_KEY THESPORTSDB_API_KEY; do
             if [ -n "${!K}" ]; then echo "✓ $K present"; else echo "• $K MISSING"; fi
           done
           npm run upload
