--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -1,29 +1,26 @@
-name: upload-and-settle
+name: upload
 
 on:
   schedule:
-    - cron: "*/10 * * * *"   # every 10 minutes (UTC)
+    # Primary: exactly at 00,10,20,30,40,50 (UTC)
+    - cron: "0,10,20,30,40,50 * * * *"
+    # Backup: +2 minutes after each mark to reduce skips
+    - cron: "2,12,22,32,42,52 * * * *"
   workflow_dispatch:
 
 permissions:
   contents: write
 
-# Avoid overlapping 10-minute runs
 concurrency:
   group: don-secrets-upload
   cancel-in-progress: true
 
 jobs:
-  upload_secrets:
-    name: Upload DON secrets
+  upload:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: .github/secrets-uploader
-
-    # Expose the fresh secretsVersion to downstream jobs
-    outputs:
-      secrets_version: ${{ steps.extract.outputs.secrets_version }}
 
     steps:
       - name: Checkout
@@ -58,6 +55,7 @@ jobs:
       - name: Show toolkit version
         run: node -p "require('@chainlink/functions-toolkit/package.json').version"
 
+      # Sanity: show which *_API_KEY are available to this job (helpful but not decisive)
       - name: Report available *_API_KEY secrets
         env:
           MLB_API_KEY: ${{ secrets.MLB_API_KEY }}
@@ -66,7 +64,7 @@ jobs:
           NHL_API_KEY: ${{ secrets.NHL_API_KEY }}
           EPL_API_KEY: ${{ secrets.EPL_API_KEY }}
           UCL_API_KEY: ${{ secrets.UCL_API_KEY }}
-          THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}
+          THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}   # ✅ added
         run: |
           for K in MLB_API_KEY NFL_API_KEY NBA_API_KEY NHL_API_KEY EPL_API_KEY UCL_API_KEY THESPORTSDB_API_KEY; do
             if [ -n "${!K}" ]; then
@@ -94,9 +92,9 @@ jobs:
           NHL_API_KEY: ${{ secrets.NHL_API_KEY }}
           EPL_API_KEY: ${{ secrets.EPL_API_KEY }}
           UCL_API_KEY: ${{ secrets.UCL_API_KEY }}
-          THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}
+          THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}   # ✅ added
 
-          # Optional endpoints
+          # Optional endpoints (harmless to upload; your SOURCE auto-detects)
           MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
           NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
           NBA_ENDPOINT: ${{ secrets.NBA_ENDPOINT }}
@@ -124,65 +122,3 @@ jobs:
           git add ../../activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || true
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
-
-      - name: Extract secretsVersion
-        id: extract
-        run: |
-          sudo apt-get update -y >/dev/null 2>&1 || true
-          sudo apt-get install -y jq >/dev/null 2>&1 || true
-          VER=$(jq -r '.secretsVersion' ../../activeSecrets.json)
-          if [ -z "$VER" ] || [ "$VER" = "null" ]; then
-            echo "Could not read secretsVersion from activeSecrets.json"; exit 1
-          fi
-          echo "secrets_version=$VER" >> "$GITHUB_OUTPUT"
-          echo "Fresh secretsVersion: $VER"
-
-  run_bot:
-    name: Run settlement bot with fresh secrets
-    runs-on: ubuntu-latest
-    needs: upload_secrets
-    env:
-      DON_SECRETS_VERSION: ${{ needs.upload_secrets.outputs.secrets_version }}
-      # Add your existing env here (examples):
-      FUNC_SUB_ID: ${{ secrets.FUNC_SUB_ID }}
-      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
-      ARBITRUM_SEPOLIA_RPC_URL: ${{ secrets.ARBITRUM_SEPOLIA_RPC_URL }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install deps (repo root)
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci --no-audit --no-fund
-          elif [ -f pnpm-lock.yaml ]; then
-            corepack enable
-            pnpm i --frozen-lockfile
-          else
-            npm i --no-audit --no-fund
-          fi
-
-      # Safety check: ensure the repo’s pointer matches the env version
-      - name: Verify secretsVersion matches env
-        run: |
-          sudo apt-get update -y >/dev/null 2>&1 || true
-          sudo apt-get install -y jq >/dev/null 2>&1 || true
-          FILE_VER=$(jq -r '.secretsVersion' activeSecrets.json)
-          echo "Env DON_SECRETS_VERSION=$DON_SECRETS_VERSION ; File secretsVersion=$FILE_VER"
-          if [ "$DON_SECRETS_VERSION" != "$FILE_VER" ]; then
-            echo "Mismatch between env and file pointer. Aborting to avoid stale secrets."
-            exit 1
-          fi
-
-      - name: Run settlement bot
-        run: |
-          echo "Using DON_SECRETS_VERSION=$DON_SECRETS_VERSION"
-          npx tsx bots/settlement-bot.ts
